Fixed light/dark mode

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,6 @@
 :root {
+    color-scheme:light dark;
+
     /* CSS HEX */
     --eerie-black: #181a1bff;
     --white-smoke: #f5f5f5ff;
@@ -15,7 +17,8 @@
     }
 
     h1 h2 h3 h4 h5 h6 p {
-        color: var(--white-smoke);
+        color: var(--white-smoke) !important;
+        -webkit-text-fill-color: var(--white-smoke) !important;
     }
 }
 
